# data

./: hh_01.py  hh_02.py  hh_03.py  laurent.py  memo.md  memo.txt  ml.py  ml_sin.py  neural.py  nn_01.py  nn_01_1.py  nn_02.py  nn_03.py  regression.py  surface.py  surface6.py  tensorflowinstall.txt  tree.py
docs/plower/: script.js
nest-simulator/build_shared_libs/doc/: fulldoc.conf
nest-simulator/build_shared_libs/libnestutil/: config.h
nest-simulator/build_shared_libs/models/: models.cpp
nest-simulator/build_shared_libs/nest/: libnest.so.3
nest-simulator/build_shared_libs/pynest/: pynestkernel.cxx  setup.py
nest-simulator/build_shared_libs/pynest/nest/: versionchecker.py
nest-simulator/build_shared_libs/sli/: libsli.so.3  libsli.so.3.9.0-post0.dev0  libsli_readline.so.3  libsli_readline.so.3.9.0-post0.dev0  sli
organater/: commands.txt  network.py  simulation.py  utils.py
organater/nest_module/: CMakeLists.txt  module.cpp  module.h
organater/nest_module/models/: local_learning_synapse.cpp  local_learning_synapse.h
organater/python_scripts/: network.py  recorder.py  simulation.py  stimuli.py
organoid-simulation/: README.md
organoid-simulation/src/: organoid.py
organoid-simulation/tests/: test_cell.py
organoid/01/organoid-simulation/src/: cell.py  simulation.py
organoid/01/organoid-simulation/src/utils/: math_helpers.py
organoid/01/organoid-simulation/tests/: test_organoid.py  test_simulation.py
plower/: .gitignore  index.html  index1.html  index4.html  index5.html  memo.txt  plower.html  requirements.txt  script.js  style.css
plower/app/: main.py
plower/backup/: index0.html  index10_height.html  index11_nonocr.html  index12_nonocr.html  index13_allin.html  index14.html  index2.html  index3_image.html  index6.html  index7.html  index8.html  index9.html  style14.css
